@startuml
title Class Diagram for Sort Feature
skinparam classAttributeIconSize 0
hide circle
left to right direction

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class SortCommandParser {
  + parse(input: String)
}

class SortCommand {
  - sortType: String
  + execute(inventory: Inventory, ui: UI)
  - getSortedItemsByCategory(inventory: Inventory)
  - formatSortLabel()
  - getComparator()
  - parseExpiryDate(expiryDate: String)
}

class Inventory {
  + getCategories()
}

class Category {
  + getItems()
}

class Item {
  + getName()
  + getQuantity()
  + getExpiryDate()
}

class DateParser {
  + parseDate(expiryDate: String)
}

class UI {
  + showSortedInventory(inventory: Inventory, sortedItemsByCategory: List<List<Item>>, sortLabel: String)
}

Command <|-- SortCommand
SortCommandParser ..> SortCommand : creates
SortCommand --> Inventory : reads from
SortCommand --> Category : reads items from
SortCommand ..> Item : compares
SortCommand ..> DateParser : uses for expiry-date sorting
SortCommand --> UI : displays through
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
@enduml
